# einkd

./: .gitignore  .isort.cfg  LICENCE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: tests.yml
einkd/: __init__.py  display.py
einkd/drivers/: __init__.py  base.py  epd2in13bc.py  virtual.py
einkd/gui/: __init__.py  window.py
einkd/gui/components/: __init__.py  component.py  filled.py  image.py  text.py
examples/: epd2in13bc.py  virtual.py
libreframe/: LICENSE  Makefile  cat_rotate.py  mypy.ini  pyproject.toml  test.py
libreframe/libreframe/api/: client.py  schema.py
libreframe/libreframe/display/: __init__.py  display.py  eink.py  tkinter.py
libreframe/libreframe/gui/: window.py
libreframe/libreframe/gui/components/: __init__.py  component.py  filled.py  image.py  text.py
libreframe/stubs/: cached_property.pyi
stubs/: spidev.pyi
stubs/RPi/: GPIO.pyi
