[tool.poetry]
name = "einkd"
version = "0.8.0"
description = "A daemon and library for displaying images on e-ink displays."
authors = [
    "Dan Trickey <code@trickey.io>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trickeydan/einkd"
homepage = "https://github.com/trickeydan/einkd"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.6"
pillow = "^8.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-mutable = "*"
flake8-todo = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "^0.14.0"
rope = "*"
isort = {version = "*",extras = ["pyproject"]}
types-Pillow = "^9.0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
