[metadata]
name = einkd
version = 0.1.2
url = https://github.com/trickeydan/einkd
author = Dan Trickey
long_description = file: README.md
description = A daemon and library for displaying images on e-ink displays.
long_description_content_type = text/markdown
license = MIT
classifiers =
    Topic :: Software Development
    Typing :: Typed
[options]
python_requires = >=3.7
packages = find:
install_requires =
    pillow >= 8.0.0

[options.package_data]
einkd = py.typed

[options.extras_require]
epdrpi =
    RPi.GPIO
    spidev

[mypy]
mypy_path = stubs

warn_unused_ignores = True
warn_return_any = True

strict_optional = True
no_implicit_optional = True

disallow_any_unimported = True
# disallow_any_expr = True
#disallow_any_decorated = True
disallow_any_explicit = True
disallow_subclassing_any = True
disallow_any_generics = True

disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True

check_untyped_defs = True

[isort]
atomic = true
balanced_wrapping = true
# vertical hanging indent style wrapping
multi_line_output = 3
include_trailing_comma = true

known_first_party = einkd
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER


[flake8]
exclude =
    .git,
    .pybuild,
    .eggs,
    __pycache__,
    .venv

ignore =
    #Don't require docstrings on magic methods.
    D105,
    #Don't require docstrings for __init__ methods.
    D107
    #Don't require imperative mood docstrings.
    D401

max_line_length = 90